fixed: command "make install" installed README from par2-subdirectory instead of main README
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1266 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.in
+++ b/Makefile.in
@@ -509,11 +509,12 @@ osx_FILES = \
 	osx/Resources/Welcome.rtf
 
 doc_FILES = \
+	lib/par2/AUTHORS \
+	lib/par2/README \
+	AUTHORS \
 	README \
 	ChangeLog \
-	COPYING \
-	lib/par2/AUTHORS \
-	lib/par2/README
+	COPYING
 
 exampleconf_FILES = \
 	nzbget.conf
