disabled unnecessary assert-statements in par2-module when building in release mode
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1270 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/configure.ac
+++ b/configure.ac
@@ -587,6 +587,8 @@ AC_MSG_CHECKING(for rdynamic linker flag)
 dnl
 dnl End of debugging code
 dnl
+else
+AC_DEFINE([NDEBUG],1,Define to 1 to exclude debug-code)
 fi
 
 
