--- a/config.h.in
+++ b/config.h.in
@@ -155,6 +155,9 @@
 /* Define to 1 if the system has the type `_Bool'. */
 #undef HAVE__BOOL
 
+/* Define to 1 to exclude debug-code */
+#undef NDEBUG
+
 /* Name of package */
 #undef PACKAGE
 
