added linux installer files to distribution archive
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1279 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -184,7 +184,8 @@ AM_CPPFLAGS = \
 EXTRA_DIST = \
 	Makefile.cvs \
 	$(windows_FILES) \
-	$(osx_FILES)
+	$(osx_FILES) \
+	$(linux_FILES)
 
 windows_FILES = \
 	daemon/windows/NTService.cpp \
@@ -238,6 +239,11 @@ osx_FILES = \
 	osx/Resources/Credits.rtf \
 	osx/Resources/Localizable.strings \
 	osx/Resources/Welcome.rtf
+
+linux_FILES = \
+	linux/installer.sh \
+	linux/install-update.sh \
+	linux/package-info.json
 
 doc_FILES = \
 	lib/par2/AUTHORS \
