added linux build scripts into subversion repository and distribution source archive
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1280 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.in
+++ b/Makefile.in
@@ -512,7 +512,10 @@ osx_FILES = \
 linux_FILES = \
 	linux/installer.sh \
 	linux/install-update.sh \
-	linux/package-info.json
+	linux/package-info.json \
+	linux/build-info.txt \
+	linux/build-nzbget \
+	linux/build-unpack
 
 doc_FILES = \
 	lib/par2/AUTHORS \
