refactor: reducing module dependencies for easier testing: extracted command line parsing code from module "Options" into new module "CommandLineParser"; modules "Options" and "CommandLineParser" do not depend on other modules and can be instantiated separately; they do not immediately abort program execution on fatal errors and instead report errors via state variables
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1292 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,6 +44,8 @@ nzbget_SOURCES = \
 	daemon/frontend/LoggableFrontend.h \
 	daemon/frontend/NCursesFrontend.cpp \
 	daemon/frontend/NCursesFrontend.h \
+    daemon/main/CommandLineParser.cpp \
+    daemon/main/CommandLineParser.h \
 	daemon/main/Maintenance.cpp \
 	daemon/main/Maintenance.h \
 	daemon/main/nzbget.cpp \
