refactor: reducing module dependencies for easier testing: extracted par file name parsing code from module "ParCoordinator" into new module "ParParser", which can be instantiated separately
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1295 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,6 +74,8 @@ nzbget_SOURCES = \
 	daemon/postprocess/ParChecker.h \
 	daemon/postprocess/ParCoordinator.cpp \
 	daemon/postprocess/ParCoordinator.h \
+	daemon/postprocess/ParParser.cpp \
+	daemon/postprocess/ParParser.h \
 	daemon/postprocess/ParRenamer.cpp \
 	daemon/postprocess/ParRenamer.h \
 	daemon/postprocess/PostScript.cpp \
