refactor: reducing module dependencies for easier testing: extracted config handling code from module "Options" into new module "ScriptConfig", which can be instantiated separately
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1297 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -54,6 +54,8 @@ nzbget_SOURCES = \
 	daemon/main/Options.h \
 	daemon/main/Scheduler.cpp \
 	daemon/main/Scheduler.h \
+	daemon/main/ScriptConfig.cpp \
+	daemon/main/ScriptConfig.h \
 	daemon/main/StackTrace.cpp \
 	daemon/main/StackTrace.h \
 	daemon/nntp/ArticleDownloader.cpp \
